infrastructure/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: vectorize-service
spec:
  selector:
    app: vectorize
  ports:
  - name: http
    port: 80
    targetPort: 8090
  type: ClusterIP
